2016-10-07 Albert Chu <chu11@llnl.gov>

	Fix invalid clearing of ctx info in
	__ipmiconsole_ctx_connection_cleanup in
	libipmiconsole/ipmiconsole_ctx.c

	* libipmiconsole/ipmiconsole_ctx.c (_ipmiconsole_ctx_connection_init):
	Remove function.

	* libipmiconsole/ipmiconsole_ctx.c (ipmiconsole_ctx_connection_setup):
	Move remnants of _ipmiconsole_ctx_connection_init into this
	function.

	* libipmiconsole/ipmiconsole_ctx.c (__ipmiconsole_ctx_connection_cleanup):
	Do not call _ipmiconsole_ctx_connection_init.  Clear only data
	__ipmiconsole_ctx_connection_cleanup should clear.
	
2016-10-06 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/: Revert removal of memsets libfreeipmi/fru/.
	Are necessary b/c fields are optional.

	* Revert removal of memset of config file data.  Necessary b/c
	data may never be set by config_file_parse if file not found.
	
2016-10-04 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Audit and fix, add +1 to string buffers, use
	secure_memset when appropriate.

	* bmc-device/: Audit and fix, remove +1 for data buffers, don't
	memset when unnecessary.

	* bmc-info/bmc-info.c (display_system_info_common): Add +1 for string buffer.

	* bmc-info/bmcinfo.c (get_channel_info_list)
	(display_channel_info): Don't memset channel array, clear values
	if not available.

	* ipmi-dcmi/ipmi-dcmi.c: Audit and fix, +1 for string buffers, use
	char not uint8_t for strings.

	* ipmi-fru/: Audit and fix, no need to memset buffers, remove +1s
	length on buffers.

	* ipmi-sensors/: Audit and fix, remove unnecessary memset.

	* ipmiconsole/: Audit and remove unnecessary memsets.

	* ipmiseld/: Audit and remove unnecessary memsets, add +1 to
	string buffers.

	* ipmipower/: Audit, remove unnecessary memsets, add +1 to string
	buffers, minor cleanup.

	* libipmimonitoring/: Audit, remove unnecessary memsets, add +1 to
	string buffers.

	* libipmiconsole/: Audit, remove unnecessary memsets, add +1 to string buffers.
